# testing_repo

./: Untitled Notebook 2025-12-23 10_04_41.py
attempt_one/: README.md  databricks.yml  pyproject.toml
attempt_one/resources/: attempt_one.job.yml  attempt_one.pipeline.yml
attempt_one/src/: dlt_pipeline.ipynb  my_query.dbquery.ipynb  notebook.ipynb  query.sql
attempt_one/tests/: main_test.py
dbt_example/: README.md  databricks.yml  dbt_project.yml  profile_template.yml  pyproject.toml  validate_bundle_tags.sh
dbt_example/dbt_profiles/: profiles.yml
dbt_example/resources/: dbt_example.job.yml
good_practices/: .gitignore  README.md  databricks.yml  notas.md  pyproject.toml  testing.md
good_practices/dev_resources/: sample_dos.job.yml
good_practices/fixtures/: taxis_sample.json
good_practices/resources/: good_practices_etl.pipeline.yml  sample_job.job.yml
good_practices/src/: sample_notebook.ipynb
good_practices/src/good_practices/: logging_example.py  main.py  taxis.py
good_practices/src/good_practices_etl/: README.md
good_practices/src/good_practices_etl/transformations/: sample_trips_good_practices.py  sample_zones_good_practices.py
good_practices/tests/: conftest.py  sample_taxis_test.py
n8n-deployment/: README.md  create_user.sql  databricks.yml  example.txt  variables.yml
n8n-deployment/resources/: lakebase.yml  n8n_app.yml
n8n-deployment/src/: app.yaml  check-db.js  package.json
n8n_rag/: README.md  databricks.yml  pyproject.toml
org_logging/: .gitignore  README.md  databricks.yml  pyproject.toml  variables.yml
org_logging/resources/: schemas.yml
org_logging/src/: main.py
org_logging/src/org_logging/: __init__.py  core.py  json_format.py  spark.py
org_logging/tests/: test_basic.py
sfmc/: AutoLoader.ipynb  Create mock files.ipynb  MainTable.py  Move files.py  Untitled Notebook 2025-10-14 09_47_48.py  ValidateTables.py  databricks.yml
sfmc/resources/: schemas.yml  segment_ingestion_and_export.job.yml
sfmc/src/: AddContacts.py  ContactsSegments.py  ContactsSilver.py  CreateSegments.py  ExportFiles.py  MainTable.py  RemoveContacts.py  UploadHistoricData.py
sfmc/tests/: conftest.py  main_test.py
