[project]
name = "good_practices"
version = "0.0.1"
authors = [{ name = "agustin.panizza@sunnydata.ai" }]
requires-python = ">=3.12, <3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "pyspark>=4.1.1",
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "zstandard>=0.25.0",
    "ruff>=0.14.13",
    "delta-spark>=4.0.1",
]

[project.scripts]
main = "good_practices.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 125
